--- a/data/sequence/sst2.ipynb
+++ b/data/sequence/sst2.ipynb
@@ -4,14 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Token Level Classification : CoNLL-2003\n",
+    "# Sequence Classification : Stanford sentiment treebank (SST2, GLUE)\n",
     "\n",
-    "This is a simple notebook to download and store the [CoNLL-2003 Named Entity Recognition dataset](https://aclanthology.org/W03-0419). We will take it from Huggingface datasets libray (<3) and turn it into one of the two formats that classy is able to parse (i.e. jsonl or tsv).\n",
+    "This is a simple notebook to download and store the [Stanford sentiment treebank](https://nlp.stanford.edu/sentiment/index.html) (SST2) dataset. We will take it from Huggingface datasets libray (<3) and turn it into one of the two formats that classy is able to parse (i.e. jsonl or tsv).\n",
     "\n",
-    "After creating this dataset you can train the model by exectuing the following bash command:\n",
-    "\n",
+    "After creating this dataset you can train the model by exectuing the following bash command\n",
     "```bash\n",
-    "classy train token data/token/conll2003 -n my_firt_conll2003_run\n",
+    "classy train sequence data/sequence/sst2 -n my_firt_sst2_run\n",
     "```"
    ]
   },
@@ -41,7 +40,7 @@
    "outputs": [],
    "source": [
     "# here we load the dataset dataset from \"datasets\"\n",
-    "dataset = load_dataset('conll2003')"
+    "dataset = load_dataset(\"glue\", \"sst2\")"
    ]
   },
   {
@@ -50,18 +49,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# here we build a simple mapping from the labels in the int format stored in the hf-datasets' version of conll2003\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here we build a simple mapping from the labels in the int format stored in the hf-datasets' version of sst2\n",
     "# to a more readable string format.\n",
     "mapping = {\n",
-    "    0: \"O\",\n",
-    "    1: 'B-PER',\n",
-    "    2: 'I-PER',\n",
-    "    3: 'B-ORG',\n",
-    "    4: 'I-ORG',\n",
-    "    5: 'B-LOC',\n",
-    "    6: 'I-LOC',\n",
-    "    7: 'B-MISC',\n",
-    "    8: 'I-MISC'\n",
+    "    -1: \"Unlabelled\",\n",
+    "    0: \"Negative\",\n",
+    "    1: \"Positive\",\n",
     "}\n",
     "\n",
     "mapping"
@@ -73,9 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's create a repositiory that will contain the dataset splits\n",
+    "# let's create a repositiory that will contains the dataset splits\n",
     "import os\n",
-    "dir_path = \"conll2003\"\n",
+    "dir_path = \"sst2\"\n",
     "os.mkdir(dir_path)\n",
     "! ls"
    ]
@@ -86,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you want the output format to be tab separated decomment the second line\n",
+    "# if you want the output format to be tab separated comment decomment the second line\n",
     "output_format = \"jsonl\"\n",
     "# output_format = \"tsv\"\n",
     "\n",
@@ -100,20 +102,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in ['train', 'validation', 'test']:\n",
-    "    \n",
-    "    with open(f'{dir_path}/{k}.{output_format}', 'w') as f:\n",
-    "    \n",
-    "        for instance in tqdm(dataset[k]):\n",
-    "            tokens = instance['tokens']\n",
-    "            ner_tags = [mapping[j] for j in instance['ner_tags']]\n",
+    "for split in [\"train\", \"validation\", \"test\"]:\n",
+    "\n",
+    "    with open(f\"{dir_path}/{split}.{output_format}\", \"w\") as f:\n",
+    "\n",
+    "        for instance in tqdm(dataset[split], desc=split):\n",
     "            \n",
+    "            sentence = instance[\"sentence\"].replace(\"\\t\", \"    \").strip()\n",
+    "            sentiment = instance[\"label\"]\n",
+    "            sentiment = mapping[sentiment]\n",
+    "\n",
     "            if output_format == \"jsonl\":\n",
-    "                json_dict = dict(tokens=tokens, labels=ner_tags)\n",
+    "                json_dict = dict(sequence=sentence, label=sentiment)\n",
     "                dump_line = json.dumps(json_dict)\n",
     "            else:\n",
-    "                dump_line = f'{\" \".join(tokens)}\\t{\" \".join(ner_tags)}'\n",
-    "            \n",
+    "                dump_line = f\"{text}\\t{sentiment}\"\n",
+    "\n",
     "            f.write(dump_line)\n",
     "            f.write(\"\\n\")"
    ]
@@ -124,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! head -5 conll2003/train.$output_format"
+    "! head -5 $dir_path/train.$output_format"
    ]
   },
   {
@@ -133,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! head -5 conll2003/validation.$output_format"
+    "! head -5 $dir_path/validation.$output_format"
    ]
   },
   {
@@ -142,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! head -5 conll2003/test.$output_format"
+    "! head -5 $dir_path/test.$output_format"
    ]
   },
   {
